--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/react-fontawesome": "^3.1.1",
     "autoprefixer": "^10.4.23",
-    "next": "16.1.0",
+    "next": "^16.1.6",
     "react": "^19",
     "react-dom": "^19"
   },
